fixed slight layout issue in order review and checkout tables

--- a/public/main.css
+++ b/public/main.css
@@ -593,7 +593,7 @@ p {
   font-size: 1.25rem;
 }
 #checkout-body #invoice-wrapper table tr:first-child th {
-  padding-block: 1rem;
+  padding-block-start: 1rem;
 }
 #checkout-body #invoice-wrapper table td {
   text-align: center;
@@ -890,7 +890,6 @@ p {
 }
 #order-review-modal #order-review-info table tr td {
   padding-block: 0.25rem;
-  height: 3rem;
 }
 #order-review-modal #order-review-info table tbody tr:last-child td {
   border-bottom: 1px solid chartreuse;
@@ -913,7 +912,7 @@ p {
   color: red;
   justify-self: center;
   height: 100%;
-  padding-inline: 1rem;
+  padding: 0.25rem 1rem;
   margin-inline: auto;
 }
 #order-review-modal #btn-close-order-review {
