--- a/src/scss/pages/_checkout.scss
+++ b/src/scss/pages/_checkout.scss
@@ -43,7 +43,7 @@
       font-size: 1.25rem;
 
       tr:first-child th {
-        padding-block: 1rem;
+        padding-block-start: 1rem;
       }
       td {
         text-align: center;
