--- a/src/scss/pages/_orders.scss
+++ b/src/scss/pages/_orders.scss
@@ -127,7 +127,7 @@
 
       tr td {
         padding-block: 0.25rem;
-        height: 3rem;
+        // height: 3rem;
       }
 
       tbody {
@@ -152,7 +152,7 @@
     color: red;
     justify-self: center;
     height: 100%;
-    padding-inline: 1rem;
+    padding: 0.25rem 1rem;
     margin-inline: auto;
   }
 
